--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -40,20 +40,21 @@
   <!-- ปุ่มย้อนกลับ (ซ้าย) -->
   <button onclick="prevImage()"
           class="absolute top-1/2 left-4 -translate-y-1/2 bg-gray-700 bg-opacity-50 text-white px-4 py-2 rounded-full hover:bg-opacity-80 z-10">
-    ⬅
+    ◀
   </button>
 
   <!-- ปุ่มถัดไป (ขวา) -->
   <button onclick="nextImage()"
           class="absolute top-1/2 right-4 -translate-y-1/2 bg-gray-700 bg-opacity-50 text-white px-4 py-2 rounded-full hover:bg-opacity-80 z-10">
-    ➡
+    ▶
   </button>
 </section>
 
 <script>
   const images = [
     "/static/images/ct1.jpg",
-    "/static/images/iq_cmp_2526.jpg"
+    "/static/images/iqv5_2526.png",
+    "/static/images/promotion.jpg",
   ];
 
   let currentIndex = 0;
