--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -20,7 +20,7 @@
       <img src="/static/images/logo.png" alt="Logo" class="h-8 w-10">
         <span class="text-xl font-bold text-gray-800">All Robotics</span>
     </div>
-<div class="space-x-4 flex items-center">
+<div class="space-x-8 flex items-center">
   <a href="#" class="text-gray-600 hover:text-blue-500">หน้าแรก</a>
 
   <!-- เฉพาะตรงนี้เท่านั้นที่ใช้ group -->
@@ -31,9 +31,10 @@
     <div class="absolute left-0 mt-2 w-48 bg-white border border-gray-200 rounded shadow-lg
                 opacity-0 invisible group-hover:opacity-100 group-hover:visible
                 transition-all duration-200 z-20">
-      <a href="#" class="block px-4 py-2 text-gray-700 hover:bg-gray-100">รายงานที่ 1</a>
-      <a href="#" class="block px-4 py-2 text-gray-700 hover:bg-gray-100">รายงานที่ 2</a>
-      <a href="#" class="block px-4 py-2 text-gray-700 hover:bg-gray-100">รายงานที่ 3</a>
+      <a href="#" class="block px-4 py-2 text-gray-700 hover:bg-gray-100">VEX 123</a>
+      <a href="#" class="block px-4 py-2 text-gray-700 hover:bg-gray-100">VEX GO</a>
+      <a href="#" class="block px-4 py-2 text-gray-700 hover:bg-gray-100">VEX IQ</a>
+      <a href="#" class="block px-4 py-2 text-gray-700 hover:bg-gray-100">VEX V5</a>
     </div>
   </div>
 
