update : add vex123

--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -23,12 +23,10 @@
       <span class="text-xl font-bold text-gray-800">All Robotics</span>
     </div>
     <div class="space-x-8 flex items-center">
-      <a href="#" class="text-gray-600 hover:text-blue-500">หน้าแรก</a>
-
+      <a href="/" class="text-gray-600 hover:text-blue-500">หน้าแรก</a>
       <!-- เฉพาะตรงนี้เท่านั้นที่ใช้ group -->
       <div class="relative group">
         <a href="#" class="text-gray-600 hover:text-blue-500">ผลิตภัณฑ์</a>
-
         <!-- เมนู dropdown -->
         <div class="absolute left-0 mt-2 w-48 bg-white border border-gray-200 rounded shadow-lg
                 opacity-0 invisible group-hover:opacity-100 group-hover:visible
@@ -118,6 +116,8 @@
         <p class="text-gray-600">ชุดหุ่นยนต์ขั้นสูงสำหรับการแข่งขันและการศึกษาในระดับมัธยมปลาย</p>
       </div>
     </div> -->
+
+
       <!-- VEX 123 -->
       <a href="/vex123" class="block bg-white shadow-md rounded-lg p-6 hover:shadow-lg transition">
         <img src="/static/images/vex123.png" alt="VEX 123" class="w-full h-50 object-cover rounded mb-4">
