update : testvex123 page

--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -119,7 +119,7 @@
 
 
       <!-- VEX 123 -->
-      <a href="/vex123" class="block bg-white shadow-md rounded-lg p-6 hover:shadow-lg transition">
+      <a href="/test123" class="block bg-white shadow-md rounded-lg p-6 hover:shadow-lg transition">
         <img src="/static/images/vex123.png" alt="VEX 123" class="w-full h-50 object-cover rounded mb-4">
         <h3 class="text-xl font-semibold mb-2">VEX 123</h3>
         <p class="text-gray-600">หุ่นยนต์สำหรับเด็กเล็ก เรียนรู้การเขียนโปรแกรมเบื้องต้น</p>
