--- a/website/templates/test123.html
+++ b/website/templates/test123.html
@@ -95,7 +95,7 @@
       </div>
       <!--Right Col-->
       <div class="w-full md:w-3/5 py-6 text-center">
-      <img src="/static/images/logo.png" alt="Logo" class="h-auto w-auto">
+      <img src="/static/images/set_vex123.png" alt="vex123" class="h-auto w-auto max-w-full md:max-w-2xl mx-auto" />
 
         <!-- <img class="w-full md:w-4/5 z-50" src="hero.png" /> -->
       </div>
