--- a/website/templates/test123.html
+++ b/website/templates/test123.html
@@ -93,7 +93,6 @@
       <div class="flex flex-col w-full md:w-2/5 justify-center items-start text-center md:text-left">
 
         <!-- //TODO - doing -->
-
         <h1 class="my-4 text-5xl font-bold leading-tight flex items-center justify-start">
           <span class="mr-4" style="font-family: 'Sarabun', sans-serif;">VEX123</span>
         </h1>
@@ -103,7 +102,6 @@
           เสริมสร้างพื้นฐานวิทยาการคอมพิวเตอร์และทักษะการคิด เหมาะสำหรับเด็กเตรียมอนุบาลถึงประถมต้น
         </p>
 
-
         <button
           class="mx-auto lg:mx-0 hover:underline bg-white text-gray-800 font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
           Buy Now
@@ -112,7 +110,7 @@
       <!--Right Col-->
       <div class="w-full md:w-3/5 py-6 text-center">
         <div class="bg-white rounded-xl shadow-lg  inline-block">
-          <img src="/static/images/set_vex123.png" alt="vex123" class="h-auto w-auto max-w-full md:max-w-2xl mx-auto" />
+          <img src="/static/images/set_vex123.png" alt="vex123" class="h-auto w-auto  md:w-1/2 mx-auto" />
         </div>
       </div>
     </div>
@@ -174,7 +172,7 @@
 
         <!-- กล่องรูปขวา -->
         <div class="w-full md:w-1/2 flex justify-center items-center">
-          <img src="/static/images/set_vex123.png" alt="vex123" class="max-w-md w-full h-auto" />
+          <img src="/static/images/vex123_code.png" alt="vex123" class="max-w-md w-full h-auto" />
         </div>
       </div>
 
